fix dark mode selection

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
   --color-primary-500: #f6d2a4;
   --color-primary-600: #f8dbb6;
 
+  --color-selected: rgb(0, 31, 63);
   --ui-primary-color: #654f3e;
   --ui-secondary-color: grey;
 
